plugins {
	id 'org.springframework.boot' version '2.7.5' apply false
	id 'io.spring.dependency-management' version '1.0.15.RELEASE' apply false
}
allprojects {
	group = 'hu.elte.feladatnyilvantarto'
	version = '0.0.1-SNAPSHOT'
}

subprojects {
	apply plugin: 'java'
	apply plugin: 'org.springframework.boot'
	apply plugin: 'io.spring.dependency-management'

	sourceCompatibility = '17'
	repositories {
		mavenCentral()
	}

	dependencies {
		implementation 'javax.servlet:jstl'
		implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
		implementation 'org.springframework.boot:spring-boot-starter-web'
		implementation 'org.springframework.boot:spring-boot-starter-validation'
		implementation 'org.springframework.boot:spring-boot-starter-security'
		implementation 'org.springframework.security:spring-security-taglibs'
		implementation 'org.springframework.security:spring-security-crypto'
		implementation 'org.springframework.boot:spring-boot-devtools'
		implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
		runtimeOnly 'com.h2database:h2'
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}
	test {
		useJUnitPlatform()
	}
}
